Issues 12 and 13 -- words of caution on __del__ and pickling

--- a/magicmethods.mkd
+++ b/magicmethods.mkd
@@ -2,27 +2,15 @@
 
 This guide is the culmination of a few months' worth of blog posts. The subject is **magic methods**.
 
-What are magic methods? They're everything in object-oriented Python. They're special methods that you 
-can define to add "magic" to your classes. They're always surrounded by double underscores (e.g. 
-`__init__` or `__lt__`). They're also not as well documented as they need to be. All of the magic methods 
-for Python appear in the same section in the Python docs, but they're scattered about and only loosely 
-organized. There's hardly an example to be found in that section (and that may very well be by design, 
-since they're all detailed in the _language reference_, along with boring syntax descriptions, etc.).
+What are magic methods? They're everything in object-oriented Python. They're special methods that you can define to add "magic" to your classes. They're always surrounded by double underscores (e.g. `__init__` or `__lt__`). They're also not as well documented as they need to be. All of the magic methods for Python appear in the same section in the Python docs, but they're scattered about and only loosely organized. There's hardly an example to be found in that section (and that may very well be by design, since they're all detailed in the _language reference_, along with boring syntax descriptions, etc.).
 
-So, to fix what I perceived as a flaw in Python's documentation, I set out to provide some more 
-plain-English, example-driven documentation for Python's magic methods. I started out with weekly blog 
-posts, and now that I've finished with those, I've put together this guide.
+So, to fix what I perceived as a flaw in Python's documentation, I set out to provide some more plain-English, example-driven documentation for Python's magic methods. I started out with weekly blog posts, and now that I've finished with those, I've put together this guide.
 
-I hope you enjoy it. Use it as a tutorial, a refresher, or a reference; it's just intended to be a 
-user-friendly guide to Python's magic methods.
+I hope you enjoy it. Use it as a tutorial, a refresher, or a reference; it's just intended to be a user-friendly guide to Python's magic methods.
 
 ##<a id="construction" href="#construction">Construction and Initialization</a>##
 
-Everyone knows the most basic magic method, `__init__`. It's the way that we can define the 
-initialization behavior of an object. However, when I call `x = SomeClass()`, `__init__` is not the first 
-thing to get called. Actually, it's a method called `__new__`, which actually creates the instance, then 
-passes any arguments at creation on to the initializer. At the other end of the object's lifespan, 
-there's `__del__`. Let's take a closer look at these 3 magic methods:
+Everyone knows the most basic magic method, `__init__`. It's the way that we can define the initialization behavior of an object. However, when I call `x = SomeClass()`, `__init__` is not the first thing to get called. Actually, it's a method called `__new__`, which actually creates the instance, then passes any arguments at creation on to the initializer. At the other end of the object's lifespan, there's `__del__`. Let's take a closer look at these 3 magic methods:
 
  
 `__new__(cls, [...)`
@@ -32,7 +20,7 @@ there's `__del__`. Let's take a closer look at these 3 magic methods:
 :    The initializer for the class. It gets passed whatever the primary constructor was called with (so, for example, if we called `x = SomeClass(10, 'foo')`, `__init__` would get passed `10` and `'foo'` as arguments. `__init__` is almost universally used in Python class definitions.
 
 `__del__(self)`
-:    If `__new__` and `__init__` formed the constructor of the object, `__del__` is the destructor. It doesn't implement behavior for the statement `del x` (so that code would not translate to `x.__del__()`). Rather, it defines behavior for when an object is garbage collected. It can be quite useful for objects that might require extra cleanup upon deletion, like sockets or file objects. Be careful, however, as there is no guarantee that `__del__` will be executed if the object is still alive when the interpreter exits, so `__del__` can't serve as a replacement for good coding practices (like always closing a connection when you're done with it.
+:    If `__new__` and `__init__` formed the constructor of the object, `__del__` is the destructor. It doesn't implement behavior for the statement `del x` (so that code would not translate to `x.__del__()`). Rather, it defines behavior for when an object is garbage collected. It can be quite useful for objects that might require extra cleanup upon deletion, like sockets or file objects. Be careful, however, as there is no guarantee that `__del__` will be executed if the object is still alive when the interpreter exits, so `__del__` can't serve as a replacement for good coding practices (like always closing a connection when you're done with it. In fact, `__del__` should almost never be used because of the precarious circumstances under which it is called; use it with caution!
 
 
 Putting it all together, here's an example of `__init__` and `__del__` in action:
@@ -53,31 +41,23 @@ Putting it all together, here's an example of `__init__` and `__del__` in action
 
 ##<a id="operators" href="#operators">Making Operators Work on Custom Classes</a>##
 
-One of the biggest advantages of using Python's magic methods is that they provide a simple way to make 
-objects behave like built-in types. That means you can avoid ugly, counter-intuitive, and nonstandard 
-ways of performing basic operators. In some languages, it's common to do something like this:
+One of the biggest advantages of using Python's magic methods is that they provide a simple way to make objects behave like built-in types. That means you can avoid ugly, counter-intuitive, and nonstandard ways of performing basic operators. In some languages, it's common to do something like this:
 
     :::python
     if instance.equals(other_instance):
         # do something
         
-You could certainly do this in Python, too, but this adds confusion and is unnecessarily verbose. 
-Different libraries might use different names for the same operations, making the client do way more work 
-than necessary. With the power of magic methods, however, we can define one method (`__eq__`, in this 
-case), and say what we _mean_ instead:
+You could certainly do this in Python, too, but this adds confusion and is unnecessarily verbose. Different libraries might use different names for the same operations, making the client do way more work than necessary. With the power of magic methods, however, we can define one method (`__eq__`, in this case), and say what we _mean_ instead:
 
     :::python
     if instance == other_instance:
         #do something
 
-That's part of the power of magic methods. The vast majority of them allow us to define meaning for 
-operators so that we can use them on our own classes just like they were built in types.
+That's part of the power of magic methods. The vast majority of them allow us to define meaning for operators so that we can use them on our own classes just like they were built in types.
 
 ###<a id="comparisons" href="#comparisons">Comparison magic methods</a>###
 
-Python has a whole slew of magic methods designed to implement intuitive comparisons between objects 
-using operators, not awkward method calls. They also provide a way to override the default Python 
-behavior for comparisons of objects (by reference). Here's the list of those methods and what they do:
+Python has a whole slew of magic methods designed to implement intuitive comparisons between objects using operators, not awkward method calls. They also provide a way to override the default Python behavior for comparisons of objects (by reference). Here's the list of those methods and what they do:
 
 
 `__cmp__(self, other)`
@@ -102,10 +82,7 @@ behavior for comparisons of objects (by reference). Here's the list of those met
 :    Defines behavior for the greater-than-or-equal-to operator, `>=`.
 
 
-For an example, consider a class to model a word. We might want to compare words lexicographically (by 
-the alphabet), which is the default comparison behavior for strings, but we also might want to do it 
-based on some other criterion, like length or number of syllables. In this example, we'll compare by 
-length. Here's an implementation:
+For an example, consider a class to model a word. We might want to compare words lexicographically (by the alphabet), which is the default comparison behavior for strings, but we also might want to do it based on some other criterion, like length or number of syllables. In this example, we'll compare by length. Here's an implementation:
 
     :::python
     class Word(str):
@@ -128,24 +105,13 @@ length. Here's an implementation:
         def __le__(self, other):
             return len(self) <= len(other)
             
-Now, we can create two `Word`s (by using `Word('foo')` and `Word('bar')`) and compare them based on 
-length. Note, however, that we didn't define `__eq__` and `__ne__`. This is because this would lead to 
-some weird behavior (notably that `Word('foo') == Word('bar')` would evaluate to true). It wouldn't make 
-sense to test for equality based on length, so we fall back on `str`'s implementation of equality.
+Now, we can create two `Word`s (by using `Word('foo')` and `Word('bar')`) and compare them based on length. Note, however, that we didn't define `__eq__` and `__ne__`. This is because this would lead to some weird behavior (notably that `Word('foo') == Word('bar')` would evaluate to true). It wouldn't make sense to test for equality based on length, so we fall back on `str`'s implementation of equality.
 
-Now would be a good time to note that you don't have to define every comparison magic method to get rich 
-comparisons. The standard library has kindly provided us with a class decorator in the module `functools` 
-that will define all rich comparison methods if you only define `__eq__` and one other (e.g. `__gt__`, 
-`__lt__`, etc.) This feature is only available in Python 2.7, but when you get a chance it saves a great 
-deal of time and effort. You can use it by placing `@total_ordering` above your class definition.
+Now would be a good time to note that you don't have to define every comparison magic method to get rich comparisons. The standard library has kindly provided us with a class decorator in the module `functools` that will define all rich comparison methods if you only define `__eq__` and one other (e.g. `__gt__`, `__lt__`, etc.) This feature is only available in Python 2.7, but when you get a chance it saves a great deal of time and effort. You can use it by placing `@total_ordering` above your class definition.
 
 ###<a id="numeric" href="#numeric">Numeric magic methods</a>###
 
-Just like you can create ways for instances of your class to be compared with comparison operators, you 
-can define behavior for numeric operators. Buckle your seat belts, folks, there's a lot of these. For 
-organization's sake, I've split the numeric magic methods into 5 categories: unary operators, normal 
-arithmetic operators, reflected arithmetic operators (more on this later), augmented assignment, and type 
-conversions.
+Just like you can create ways for instances of your class to be compared with comparison operators, you can define behavior for numeric operators. Buckle your seat belts, folks, there's a lot of these. For organization's sake, I've split the numeric magic methods into 5 categories: unary operators, normal arithmetic operators, reflected arithmetic operators (more on this later), augmented assignment, and type conversions.
 
 ####Unary operators and functions####
 
@@ -167,8 +133,7 @@ Unary operators and functions only have one operand, e.g. negation, absolute val
 
 ####Normal arithmetic operators####
 
-Now, we cover the typical binary operators (and a function or two): +, -, * and the like. These are, for 
-the most part, pretty self-explanatory.
+Now, we cover the typical binary operators (and a function or two): +, -, * and the like. These are, for the most part, pretty self-explanatory.
 
 
 `__add__(self, other)`
@@ -215,22 +180,17 @@ the most part, pretty self-explanatory.
 
 ####Reflected arithmetic operators####
 
-You know how I said I would get to reflected arithmetic in a bit? Some of you might think it's some big, 
-scary, foreign concept. It's actually quite simple. Here's an example:
+You know how I said I would get to reflected arithmetic in a bit? Some of you might think it's some big, scary, foreign concept. It's actually quite simple. Here's an example:
 
     :::python
     some_object + other
 
-That was "normal" addition. The reflected equivalent is the same thing, except with the operands switched 
-around:
+That was "normal" addition. The reflected equivalent is the same thing, except with the operands switched around:
 
     :::python
     other + some_object
 
-So, all of these magic methods do the same thing as their normal equivalents, except the perform the 
-operation with other as the first operand and self as the second, rather than the other way around. In 
-most cases, the result of a reflected operation is the same as its normal equivalent, so you may just end 
-up defining `__radd__` as calling `__add__` and so on. Without further ado:
+So, all of these magic methods do the same thing as their normal equivalents, except the perform the operation with other as the first operand and self as the second, rather than the other way around. In most cases, the result of a reflected operation is the same as its normal equivalent, so you may just end up defining `__radd__` as calling `__add__` and so on. Without further ado:
 
 
 `__radd__(self, other)`
@@ -279,16 +239,13 @@ up defining `__radd__` as calling `__add__` and so on. Without further ado:
 
 ####Augmented assignment####
 
-Python also has a wide variety of magic methods to allow custom behavior to be defined for augmented 
-assignment. You're probably already familiar with augmented assignment, it combines "normal" operators 
-with assignment. If you still don't know what I'm talking about, here's an example:
+Python also has a wide variety of magic methods to allow custom behavior to be defined for augmented assignment. You're probably already familiar with augmented assignment, it combines "normal" operators with assignment. If you still don't know what I'm talking about, here's an example:
 
     :::python
     x = 5
     x += 1 # in other words x = x + 1
 
-Each of these methods does not return a value, because assignment in Python does not return any value. 
-Instead, they just alter the state of the class. Here's the list:
+Each of these methods does not return a value, because assignment in Python does not return any value. Instead, they just alter the state of the class. Here's the list:
 
 
 `__iadd__(self, other)`
@@ -334,8 +291,7 @@ Instead, they just alter the state of the class. Here's the list:
 
 ####Type conversion magic methods####
 
-Python also has an array of magic methods designed to implement behavior for built in type 
-conversion functions like `float()`. Here they are:
+Python also has an array of magic methods designed to implement behavior for built in type conversion functions like `float()`. Here they are:
 
 
 `__int__(self)`
@@ -368,9 +324,7 @@ conversion functions like `float()`. Here they are:
 
 ##<a id="representations" href="#representations">Representing your Classes</a>##
 
-It's often useful to have a string representation of a class. In Python, there's a few methods that you 
-can implement in your class definition to customize how built in functions that return representations of 
-your class behave.
+It's often useful to have a string representation of a class. In Python, there's a few methods that you can implement in your class definition to customize how built in functions that return representations of your class behave.
 
 
 `__str__(self)`
@@ -389,15 +343,11 @@ your class behave.
 :    Defines behavior for when `bool()` is called on an instance of your class. Should return True or False, depending on whether you would want to consider the instance to be True or False.
 
 
-We're pretty much done with the boring (and example-free) part of the magic methods guide. Now that we've 
-covered some of the more basic magic methods, it's time to move to more advanced material.
+We're pretty much done with the boring (and example-free) part of the magic methods guide. Now that we've covered some of the more basic magic methods, it's time to move to more advanced material.
 
 ##<a id="access" href="#access">Controlling Attribute Access</a>##
 
-Many people coming to Python from other languages complain that it lacks true encapsulation for classes 
-(e.g. no way to define private attributes and then have public getter and setters). This couldn't be 
-farther than the truth: it just happens that Python accomplishes a great deal of encapsulation through 
-"magic", instead of explicit modifiers for methods or fields. Take a look:
+Many people coming to Python from other languages complain that it lacks true encapsulation for classes (e.g. no way to define private attributes and then have public getter and setters). This couldn't be farther than the truth: it just happens that Python accomplishes a great deal of encapsulation through "magic", instead of explicit modifiers for methods or fields. Take a look:
 
 
 `__getattr__(self, name)`
@@ -426,14 +376,9 @@ You can easily cause a problem in your definitions of any of the methods control
         self.__dict__[name] = value # assigning to the dict of names in the class
         # define custom behavior here 
 
-Again, Python's magic methods are incredibly powerful, and with great power comes great 
-responsibility. It's important to know the proper way to use magic methods so you don't break any code.        
+Again, Python's magic methods are incredibly powerful, and with great power comes great responsibility. It's important to know the proper way to use magic methods so you don't break any code.        
 
-So, what have we learned about custom attribute access in Python? It's not to be used lightly. In fact, 
-it tends to be excessively powerful and counter-intuitive. But the reason why it exists is to scratch a 
-certain itch: Python doesn't seek to make bad things impossible, but just to make them difficult. Freedom 
-is paramount, so you can really do whatever you want. Here's an example of some of the special attribute 
-access methods in action (note that we use `super` because not all classes have an attribute `__dict__`):
+So, what have we learned about custom attribute access in Python? It's not to be used lightly. In fact, it tends to be excessively powerful and counter-intuitive. But the reason why it exists is to scratch a certain itch: Python doesn't seek to make bad things impossible, but just to make them difficult. Freedom is paramount, so you can really do whatever you want. Here's an example of some of the special attribute access methods in action (note that we use `super` because not all classes have an attribute `__dict__`):
 
     :::python
     class AccessCounter:
@@ -458,25 +403,12 @@ access methods in action (note that we use `super` because not all classes have 
 
 ##<a id="sequence" href="#sequence">Making Custom Sequences</a>##
 
-There's a number of ways to get your Python classes to act like built in sequences (dict, tuple, list, 
-string, etc.). These are by far my favorite magic methods in Python because of the absurd degree of 
-control they give you and the way that they magically make a whole array of global functions work 
-beautifully on instances of your class. But before we get down to the good stuff, a quick word on 
-requirements.
+There's a number of ways to get your Python classes to act like built in sequences (dict, tuple, list, string, etc.). These are by far my favorite magic methods in Python because of the absurd degree of control they give you and the way that they magically make a whole array of global functions work beautifully on instances of your class. But before we get down to the good stuff, a quick word on requirements.
 
 ####Requirements####
-Now that we're talking about creating your own sequences in Python, it's time to talk about _protocols_. 
-Protocols are somewhat similar to interfaces in other languages in that they give you a set of methods 
-you must define. However, in Python protocols are totally informal and require no explicit declarations 
-to implement. Rather, they're more like guidelines.
+Now that we're talking about creating your own sequences in Python, it's time to talk about _protocols_. Protocols are somewhat similar to interfaces in other languages in that they give you a set of methods you must define. However, in Python protocols are totally informal and require no explicit declarations to implement. Rather, they're more like guidelines.
 
-Why are we talking about protocols now? Because implementing custom container types in Python involves 
-using some of these protocols. First, there's the protocol for defining immutable containers: to make an 
-immutable container, you need only define `__len__` and `__getitem__` (more on these later). The mutable 
-container protocol requires everything that immutable containers require plus `__setitem__` and 
-`__delitem__`. Lastly, if you want your object to be iterable, you'll have to define `__iter__`, which 
-returns an iterator. That iterator must conform to an iterator protocol, which requires iterators to have 
-methods called `__iter__`(returning itself) and `next`.
+Why are we talking about protocols now? Because implementing custom container types in Python involves using some of these protocols. First, there's the protocol for defining immutable containers: to make an immutable container, you need only define `__len__` and `__getitem__` (more on these later). The mutable container protocol requires everything that immutable containers require plus `__setitem__` and `__delitem__`. Lastly, if you want your object to be iterable, you'll have to define `__iter__`, which returns an iterator. That iterator must conform to an iterator protocol, which requires iterators to have methods called `__iter__`(returning itself) and `next`.
 
 ####The magic behind containers####
 
@@ -510,8 +442,7 @@ Without any more wait, here are the magic methods that containers use:
 
 ####An example####
 
-For our example, let's look at a list that implements some functional constructs that you might be used 
-to from other languages (Haskell, for example).
+For our example, let's look at a list that implements some functional constructs that you might be used to from other languages (Haskell, for example).
 
     :::python
     class FunctionalList:
@@ -564,14 +495,11 @@ to from other languages (Haskell, for example).
             # get first n elements
             return self.values[:n]
 
-There you have it, a (marginally) useful example of how to implement your own sequence. Of course, there 
-are more useful applications of custom sequences, but quite a few of them are already implemented in the 
-standard library (batteries included, right?), like `Counter`, `OrderedDict`, and `NamedTuple`.
+There you have it, a (marginally) useful example of how to implement your own sequence. Of course, there are more useful applications of custom sequences, but quite a few of them are already implemented in the standard library (batteries included, right?), like `Counter`, `OrderedDict`, and `NamedTuple`.
 
 ##<a id="reflection" href="#reflection">Reflection</a>##
 
-You can also control how reflection using the built in functions `isinstance()` and `issubclass()`behaves 
-by defining magic methods. The magic methods are:
+You can also control how reflection using the built in functions `isinstance()` and `issubclass()`behaves by defining magic methods. The magic methods are:
 
 
 `__instancecheck__(self, instance)`
@@ -582,21 +510,13 @@ by defining magic methods. The magic methods are:
 
 
 
-The use case for these magic methods might seem small, and that may very well be true. I won't spend too 
-much more time on reflection magic methods because they aren't very important, but they reflect something 
-important about object-oriented programming in Python and Python in general: there is almost always an 
-easy way to do something, even if it's rarely necessary. These magic methods might not seem useful, but 
-if you ever need them you'll be glad that they're there (and that you read this guide!).
+The use case for these magic methods might seem small, and that may very well be true. I won't spend too much more time on reflection magic methods because they aren't very important, but they reflect something important about object-oriented programming in Python and Python in general: there is almost always an easy way to do something, even if it's rarely necessary. These magic methods might not seem useful, but if you ever need them you'll be glad that they're there (and that you read this guide!).
 
 ##<a id="callable" href="#callable">Callable Objects</a>##
 
-As you may already know, in Python, functions are first-class objects. This means that they can be passed 
-to functions and methods just as if they were objects of any other kind. This is an incredibly powerful 
-feature.
+As you may already know, in Python, functions are first-class objects. This means that they can be passed to functions and methods just as if they were objects of any other kind. This is an incredibly powerful feature.
 
-A special magic method in Python allows instances of your classes to behave as if they were functions, so 
-that you can "call" them, pass them to functions that take functions as arguments, and so on. This is 
-another powerful convenience feature that makes programming in Python that much sweeter.
+A special magic method in Python allows instances of your classes to behave as if they were functions, so that you can "call" them, pass them to functions that take functions as arguments, and so on. This is another powerful convenience feature that makes programming in Python that much sweeter.
 
 
 `__call__(self, [args...])`
@@ -604,9 +524,7 @@ another powerful convenience feature that makes programming in Python that much 
 
 
 
-`__call__` can be particularly useful in classes whose instances that need to often change state. 
-"Calling" the instance can be an intuitive and elegant way to change the object's state. An example might 
-be a class representing an entity's position on a plane:
+`__call__` can be particularly useful in classes whose instances that need to often change state. "Calling" the instance can be an intuitive and elegant way to change the object's state. An example might be a class representing an entity's position on a plane:
 
     :::python
     class Entity:
@@ -624,17 +542,13 @@ be a class representing an entity's position on a plane:
 
 ##<a id="context" href="#context">Context Managers</a>##
 
-In Python 2.5, a new keyword was introduced in Python along with a new method for code reuse, the `with` 
-statement. The concept of context managers was hardly new in Python (it was implemented before as a part 
-of the library), but not until [PEP 343](http://www.python.org/dev/peps/pep-0343/) was accepted did it 
-achieve status as a first class language construct. You may have seen with statements before:
+In Python 2.5, a new keyword was introduced in Python along with a new method for code reuse, the `with` statement. The concept of context managers was hardly new in Python (it was implemented before as a part of the library), but not until [PEP 343](http://www.python.org/dev/peps/pep-0343/) was accepted did it achieve status as a first class language construct. You may have seen with statements before:
 
     :::python
     with open('foo.txt') as bar:
         # perform some action with bar
         
-Context managers allow setup and cleanup actions to be taken for objects when their creation is wrapped 
-with a `with` statement. The behavior of the context manager is determined by two magic methods:
+Context managers allow setup and cleanup actions to be taken for objects when their creation is wrapped with a `with` statement. The behavior of the context manager is determined by two magic methods:
 
 
 `__enter__(self)`
@@ -645,9 +559,7 @@ with a `with` statement. The behavior of the context manager is determined by tw
 
 
 
-`__enter__` and `__exit__` can be useful for specific classes that have well-defined and common behavior 
-for setup and cleanup. You can also use these methods to create generic context managers that wrap other 
-objects. Here's an example:
+`__enter__` and `__exit__` can be useful for specific classes that have well-defined and common behavior for setup and cleanup. You can also use these methods to create generic context managers that wrap other objects. Here's an example:
 
     :::python
     class Closer:
@@ -685,20 +597,13 @@ Here's an example of `Closer` in action, using an FTP connection to demonstrate 
     >>> i
     6
 
-See how our wrapper gracefully handled both proper and improper uses? That's the power of context 
-managers and magic methods.
+See how our wrapper gracefully handled both proper and improper uses? That's the power of context managers and magic methods.
 
 ##<a id="descriptor" href="#descriptor">Building Descriptor Objects</a>##
 
-Descriptors are classes which, when accessed through either getting, setting, or deleting, can also alter 
-other objects. Descriptors aren't meant to stand alone; rather, they're meant to be held by an owner 
-class. Descriptors can be useful when building object-oriented databases or classes that have attributes 
-whose values are dependent on each other. Descriptors are particularly useful when representing 
-attributes in several different units of measurement or representing computed attributes (like distance 
-from the origin in a class to represent a point on a grid).
+Descriptors are classes which, when accessed through either getting, setting, or deleting, can also alter other objects. Descriptors aren't meant to stand alone; rather, they're meant to be held by an owner class. Descriptors can be useful when building object-oriented databases or classes that have attributes whose values are dependent on each other. Descriptors are particularly useful when representing attributes in several different units of measurement or representing computed attributes (like distance from the origin in a class to represent a point on a grid).
 
-To be a descriptor, a class must have at least one of `__get__`, `__set__`, and `__delete__` implemented. 
-Let's take a look at those magic methods:
+To be a descriptor, a class must have at least one of `__get__`, `__set__`, and `__delete__` implemented. Let's take a look at those magic methods:
 
 
 `__get__(self, instance, owner)`
@@ -709,7 +614,6 @@ Let's take a look at those magic methods:
 
 `__delete__(self, instance)`
 :    Define behavior for when the descriptor's value is deleted. `instance` is the instance of the owner object.
-
 
 
 Now, an example of a useful application of descriptors: unit conversions.
@@ -741,21 +645,13 @@ Now, an example of a useful application of descriptors: unit conversions.
 
 ##<a id="pickling" href="#pickling">Pickling Your Objects</a>##
 
-If you spend time with other Pythonistas, chances are you've at least heard of pickling. Pickling is a 
-serialization process for Python data structures, and can be incredibly useful when you need to store an 
-object and retrieve it later. It's also a major source of worries and confusion.
+If you spend time with other Pythonistas, chances are you've at least heard of pickling. Pickling is a serialization process for Python data structures, and can be incredibly useful when you need to store an object and retrieve it later (usually for caching). It's also a major source of worries and confusion.
 
-Pickling is so important that it doesn't just have its own module (`pickle`), but its own _protocol_ and 
-the magic methods to go with it. But first, a brief word on how to pickle existing types(feel free to 
-skip it if you already know).
+Pickling is so important that it doesn't just have its own module (`pickle`), but its own _protocol_ and the magic methods to go with it. But first, a brief word on how to pickle existing types(feel free to skip it if you already know).
 
 ###Pickling: A Quick Soak in the Brine###
 
-Let's dive into pickling. Say you have a dictionary that you want to store and retrieve later. You could
-write it's contents to a file, carefully making sure that you write correct syntax, then retrieve it 
-using either `exec()` or processing the file input. But this is precarious at best: if you store 
-important data in plain text, it could be corrupted or changed in any number of ways to make your program 
-crash or worse run malicious code on your computer. Instead, we're going to pickle it:
+Let's dive into pickling. Say you have a dictionary that you want to store and retrieve later. You couldwrite it's contents to a file, carefully making sure that you write correct syntax, then retrieve it using either `exec()` or processing the file input. But this is precarious at best: if you store important data in plain text, it could be corrupted or changed in any number of ways to make your program crash or worse run malicious code on your computer. Instead, we're going to pickle it:
 
     :::python
     import pickle
@@ -779,11 +675,11 @@ Now, a few hours later, we want it back. All we have to do is unpickle it:
     
 What happens? Exactly what you expect. It's just like we had `data` all along.
 
+Now, for a word of caution: pickling is not perfect. Pickle files are easily corrupted on accident and on purpose. Pickling may be more secure than using flat text files, but it still can be used to run malicious code. It's also incompatible across versions of Python, so don't expect to distribute pickled objects and expect people to be able to open them. However, it can also be a powerful tool for caching and other common serialization tasks.
+
 ###Pickling your own Objects###
 
-Pickling isn't just for built-in types. It's for any class that follows the pickle protocol. The pickle 
-protocol has four optional methods for Python objects to customize how they act (it's a bit different for 
-C extensions, but that's not in our scope):
+Pickling isn't just for built-in types. It's for any class that follows the pickle protocol. The pickle protocol has four optional methods for Python objects to customize how they act (it's a bit different for C extensions, but that's not in our scope):
 
 `__getinitargs__(self)`
 :    If you'd like for `__init__` to be called when your class is unpickled, you can define `__getinitargs__`, which should return a tuple of the arguments that you'd like to be passed to  `__init__`. Note that this method will only work for old-style classes.
@@ -799,8 +695,7 @@ C extensions, but that's not in our scope):
 
 ###An Example###
 
-Our example is a `Slate`, which remembers what its values have been and when those values were written to 
-it. However, this particular slate goes blank each time it is pickled: the current value will not be saved.
+Our example is a `Slate`, which remembers what its values have been and when those values were written to it. However, this particular slate goes blank each time it is pickled: the current value will not be saved.
 
     :::python
     import time
@@ -837,11 +732,4 @@ it. However, this particular slate goes blank each time it is pickled: the curre
             
 ##<a id="conclusion" href="#conclusion">Conclusion</a>##
 
-The goal of this guide is to bring something to anyone that reads it, regardless of their experience with 
-Python or object-oriented programming. If you're just getting started with Python, you've gained valuable 
-knowledge of the basics of writing feature-rich, elegant, and easy-to-use classes. If you're an 
-intermediate Python programmer, you've probably picked up some slick new concepts and strategies and some 
-good ways to reduce the amount of code written by you and clients. If you're an expert Pythonista, you've 
-been refreshed on some of the stuff you might have forgotten about and maybe picked up a few new tricks 
-along the way. Whatever your experience level, I hope that this trip through Python's special methods has 
-been truly magical (I couldn't resist the final pun).
+The goal of this guide is to bring something to anyone that reads it, regardless of their experience with Python or object-oriented programming. If you're just getting started with Python, you've gained valuable knowledge of the basics of writing feature-rich, elegant, and easy-to-use classes. If you're an intermediate Python programmer, you've probably picked up some slick new concepts and strategies and some good ways to reduce the amount of code written by you and clients. If you're an expert Pythonista, you've been refreshed on some of the stuff you might have forgotten about and maybe picked up a few new tricks along the way. Whatever your experience level, I hope that this trip through Python's special methods has been truly magical (I couldn't resist the final pun).
